fix loading message alignment

--- a/src/livecodes/styles/inc-modal.scss
+++ b/src/livecodes/styles/inc-modal.scss
@@ -55,6 +55,7 @@
   .modal-message {
     text-align: center;
     width: 100%;
+    min-height: 3rem;
 
     &.hidden {
       display: none;
@@ -1691,12 +1692,12 @@
 }
 
 @media only screen and (max-width: 1024px) {
-  #modal,
-  #modal.small {
+  #modal {
     min-height: 23rem;
   }
 
   #modal.small {
+    min-height: 3rem;
     width: 23rem;
   }
 
